--- a/public/signup.html
+++ b/public/signup.html
@@ -161,7 +161,7 @@
 
       <div class="signup-container-wrapper">
         <div class="OfficeWork">
-          <img src="/事務作業.jpg" id="slide-img_signup" alt="事務作業" />
+          <img src="事務作業.jpg" id="slide-img_signup" alt="事務作業" />
         </div>
         <div class="signupform"></div>
         <form id="signupForm" class="signupForm">
@@ -260,7 +260,7 @@
       });
 
     // 新規登録画面のスライドショー
-    const images = ["/事務作業.jpg", "/オフィスビル.jpg", "/ポイント.jpg"];
+    const images = ["事務作業.jpg", "オフィスビル.jpg", "ポイント.jpg"];
     let currentIndex = 0;
     document.getElementById("slide-img_signup").src = images[currentIndex];
 
