Add resume.html emergency address input form

--- a/public/resume.html
+++ b/public/resume.html
@@ -102,6 +102,40 @@
                 </div>
             </div>
             <div class="form-row">
+                <!-- 緊急連絡先住所入力欄 -->
+                <div class="form-label">
+                    <label for="address">緊急連絡先住所</label>
+                </div>
+                <div class="form-input-group">
+                    <label for="searchAddressBox">〒
+                        <input type="number" id="searchAddressBox_kinkyu" class="textbox address_textbox"
+                            placeholder="例:1638001(ﾊｲﾌﾝなし)" onkeyup="inputAddressCheck ()">
+                    </label>
+                    <button type="button" onclick="searchAddress_kinkyu()">探す</button>
+                </div>
+                <div id="checkAddress_kinkyu"></div>
+                <div class="form-input-group">
+                    <label for="address_hiragana">緊急連絡先住所(ひらがな)
+                        <input type="text" id="address_hiragana_kinkyu" class="textbox" placeholder="例:まつえしとのまち">
+                    </label>
+                </div>
+                <div class="form-input-group">
+                    <label for="banti_hiragana">緊急連絡先番地(ひらがな)
+                        <input type="text" class="textbox" id="banti_hiragana_kinkyu" placeholder="例:１ばんち">
+                    </label>
+                </div>
+                <div class="form-input-group">
+                    <label for="address">緊急連絡先住所
+                        <input type="text" id="addressForm_kinkyu" class="textbox" placeholder="例:松江市殿町">
+                    </label>
+                </div>
+                <div class="form-input-group">
+                    <label for="banti">緊急連絡先番地
+                        <input type="text" class="textbox" id="banti_kinkyu" placeholder="例:１番地">
+                    </label>
+                </div>
+            </div>
+            <div class="form-row">
                 <!-- 電話番号入力欄 -->
                 <div class="form-label">
                     <label for="searchTelBox">電話番号</label>
@@ -218,68 +252,6 @@
 
     <script src="script.js"></script>
     <script>
-        // 半角カタカナを全角カタカナに変換する関数
-        function hankana2Zenkana(str) {
-            // 半角カタカナと全角カタカナの対応マップ
-            let kanaMap = {
-                'ｶﾞ': 'ガ', 'ｷﾞ': 'ギ', 'ｸﾞ': 'グ', 'ｹﾞ': 'ゲ', 'ｺﾞ': 'ゴ',
-                'ｻﾞ': 'ザ', 'ｼﾞ': 'ジ', 'ｽﾞ': 'ズ', 'ｾﾞ': 'ゼ', 'ｿﾞ': 'ゾ',
-                'ﾀﾞ': 'ダ', 'ﾁﾞ': 'ヂ', 'ﾂﾞ': 'ヅ', 'ﾃﾞ': 'デ', 'ﾄﾞ': 'ド',
-                'ﾊﾞ': 'バ', 'ﾋﾞ': 'ビ', 'ﾌﾞ': 'ブ', 'ﾍﾞ': 'ベ', 'ﾎﾞ': 'ボ',
-                'ﾊﾟ': 'パ', 'ﾋﾟ': 'ピ', 'ﾌﾟ': 'プ', 'ﾍﾟ': 'ペ', 'ﾎﾟ': 'ポ',
-                'ｳﾞ': 'ヴ', 'ﾜﾞ': 'ヷ', 'ｦﾞ': 'ヺ',
-                'ｱ': 'ア', 'ｲ': 'イ', 'ｳ': 'ウ', 'ｴ': 'エ', 'ｵ': 'オ',
-                'ｶ': 'カ', 'ｷ': 'キ', 'ｸ': 'ク', 'ｹ': 'ケ', 'ｺ': 'コ',
-                'ｻ': 'サ', 'ｼ': 'シ', 'ｽ': 'ス', 'ｾ': 'セ', 'ｿ': 'ソ',
-                'ﾀ': 'タ', 'ﾁ': 'チ', 'ﾂ': 'ツ', 'ﾃ': 'テ', 'ﾄ': 'ト',
-                'ﾅ': 'ナ', 'ﾆ': 'ニ', 'ﾇ': 'ヌ', 'ﾈ': 'ネ', 'ﾉ': 'ノ',
-                'ﾊ': 'ハ', 'ﾋ': 'ヒ', 'ﾌ': 'フ', 'ﾍ': 'ヘ', 'ﾎ': 'ホ',
-                'ﾏ': 'マ', 'ﾐ': 'ミ', 'ﾑ': 'ム', 'ﾒ': 'メ', 'ﾓ': 'モ',
-                'ﾔ': 'ヤ', 'ﾕ': 'ユ', 'ﾖ': 'ヨ',
-                'ﾗ': 'ラ', 'ﾘ': 'リ', 'ﾙ': 'ル', 'ﾚ': 'レ', 'ﾛ': 'ロ',
-                'ﾜ': 'ワ', 'ｦ': 'ヲ', 'ﾝ': 'ン',
-                'ｧ': 'ァ', 'ｨ': 'ィ', 'ｩ': 'ゥ', 'ｪ': 'ェ', 'ｫ': 'ォ',
-                'ｯ': 'ッ', 'ｬ': 'ャ', 'ｭ': 'ュ', 'ｮ': 'ョ',
-                '｡': '。', '､': '、', 'ｰ': 'ー', '｢': '「', '｣': '」', '･': '・'
-            };
-
-            // 正規表現で濁点付き文字、または単一の半角文字をマッチさせる
-            var reg = new RegExp('(' + Object.keys(kanaMap).join('|') + ')', 'g');
-
-            // 置換処理
-            return str.replace(reg, function (match) {
-                return kanaMap[match];
-            });
-        }
-        // カタカナからひらがなにする
-        function katakanaToHiragana(str) {
-            return str.replace(/[\u30a1-\u30f6]/g, function (match) {
-                return String.fromCharCode(match.charCodeAt(0) - 0x60);
-            }).replace(/ー/g, 'ー');
-        }
-        // 郵便番号から住所を検索する
-        async function searchAddress() {
-            const zipcode = document.getElementById("searchAddressBox").value;
-            const url = `https://zipcloud.ibsnet.co.jp/api/search?zipcode=${zipcode}`;
-
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
-
-                if (data.results) {
-                    const result = data.results[0];
-                    // 漢字
-                    document.getElementById('addressForm').value = result.address1 + result.address2 + result.address3;
-
-                    // ふりがな（ひらがな）
-                    const address = result.kana1 + result.kana2 + result.kana3;
-                    document.getElementById('address_hiragana').value = katakanaToHiragana(hankana2Zenkana(address));
-                }
-            } catch (error) {
-                console.error('住所取得エラー:', error);
-            }
-        }
-
         // 画像取得
         const imageInput = document.getElementById('imageInput');
         const preview = document.getElementById('preview');
