Fix signup.html title size

--- a/public/signup.html
+++ b/public/signup.html
@@ -155,7 +155,7 @@
 <body>
   <div class="signup-container">
     <div class="background-triangle">
-      <h1 style="margin-bottom: 30px;">
+      <h1 style="margin-bottom: 30px; font-size: 40px;">
         履歴書作成アプリ
       </h1>
 
